# codealmanac

./: .almanac.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  MANUAL.md  README.md  RELEASE.md  implementation-tickets.md  install.sh  notes.md  package-lock.json  package.json  pyproject.toml  transcript-turn-1-dev-marker.md  transcript-turn-3-dev-marker.md
.almanac/: README.md  topics.yaml
.almanac/pages/: accidental-special-case-architecture.md  agentmemory-competitor.md  agents-md.md  almanac-brand-direction.md  almanac-business-model.md  almanac-doctor.md  almanac-product-family.md  almanac-serve.md  automation.md  build-operation.md  capture-automation.md  capture-flow.md  capture-ledger.md  claude-agent-sdk.md  codex-app-server-harness-adapter.md  codex-cli-harness-adapter.md  codex-supermemory.md  company-brain.md  competitive-landscape.md  cosmic-python-architecture-reference.md  customer-segmentation.md  deep-refactor-audit.md  documenting-software-architectures.md  dosu.md  evidence-bundles.md  farzapedia.md  getting-started.md  github-native-wiki-maintenance.md  global-agent-instructions.md  global-registry.md  harness-providers.md  homepage-narrative.md  hosted-deployment-environment.md  ingest-operation.md  install-time-node-launcher.md  mem0.md  (+28 more)
almanac/: README.md  coverage-map.md  getting-started.md  topics.yaml
docs/: concepts.md  python-port-live-agreement.md  requirements_log.md
guides/: mini.md  reference.md
src/: ansi-theme.ts  ansi.ts  cli.ts  errors.ts  paths.ts  slug.ts
test/: absorb-input.test.ts  absorb-operation.test.ts  agent-runtime-provider-registry.test.ts  agent-runtime-types.test.ts  agents-command.test.ts  ansi.test.ts  architecture-automation-update-boundaries.test.ts  architecture-boundaries.test.ts  architecture-foundation-cli-boundaries.test.ts  architecture-indexer-diagnostics-boundaries.test.ts  architecture-jobs-sync-boundaries.test.ts  architecture-lifecycle-provider-boundaries.test.ts  architecture-setup-boundaries.test.ts  architecture-wiki-command-boundaries.test.ts  automation.test.ts  autoregister.test.ts  build-operation.test.ts  capture-sweep.test.ts  claude-agent-runtime-provider.test.ts  claude-harness-provider.test.ts  cli.test.ts  cloud-capture.test.ts  cloud-client.test.ts  cloud-hooks.test.ts  codex-agent-runtime-provider.test.ts  codex-harness-provider.test.ts  composio-accounts.test.ts  config-command.test.ts  connect-command.test.ts  connectors-config.test.ts  doctor.test.ts  duration.test.ts  frontmatter.test.ts  garden-operation.test.ts  github-source-resolver.test.ts  harness-types.test.ts  health.test.ts  helpers.ts  indexer.test.ts  ingest-input.test.ts  (+45 more)
tests/: conftest.py  test_api.py  test_architecture.py  test_automation_service.py  test_build_workflow.py  test_capture_transcript_upload.py  test_claude_adapter.py  test_cli.py  test_cli_syntax.py  test_cli_telemetry.py  test_cloud_auth_service.py  test_cloud_capture_service.py  test_cloud_login_workflow.py  test_cloud_open_workflow.py  test_cloud_repo_workflow.py  test_cloud_repositories_service.py  test_cloud_runs_service.py  test_cloud_runs_workflow.py  test_codex_adapter.py  test_codex_app_server_adapter.py  test_config_service.py  test_control_service.py  test_controlled_model_config.py  test_database.py  test_deliveries_service.py  test_diagnostics.py  test_engine_runs_service.py  test_engine_workspaces_service.py  test_filesystem_directory_selection.py  test_filesystem_source_runtime.py  test_garden_workflow.py  test_git_local_delivery.py  test_git_local_repository_probe.py  test_git_repository_probe.py  test_github_source_runtime.py  test_harnesses_service.py  test_ingest_workflow.py  test_init_workflow.py  test_local_delivery_workflow.py  test_local_engine_workflow.py  (+45 more)
viewer/: app.css  app.js  index.html  jobs-transcript.js  jobs-view.js  jobs.css  search-suggestions.js
(+2203 files in other folders)
