[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codealmanac"
version = "0.1.0"
description = "A local codebase wiki maintained by AI coding agents."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8",
  "pyyaml>=6.0",
]

[project.scripts]
codealmanac = "codealmanac.cli.main:main"

[dependency-groups]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
