[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codealmanac"
version = "0.1.0"
description = "A local codebase wiki maintained by AI coding agents."
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.15.0",
  "charset-normalizer>=3.4.7",
  "fastapi>=0.138.1",
  "httpx>=0.28.1",
  "humanfriendly>=10.0",
  "jsonlines>=4.0",
  "markdown-it-py>=4.2.0",
  "pathspec>=1.1.1",
  "pydantic>=2.8",
  "python-frontmatter>=1.3.0",
  "pyyaml>=6.0",
  "ruamel-yaml>=0.19.1",
  "uvicorn>=0.49.0",
]

[project.scripts]
codealmanac = "codealmanac.cli.main:main"

[dependency-groups]
dev = [
  "httpx2>=2.5.0",
  "pytest>=8.2",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codealmanac = ["server/assets/*.html", "server/assets/*.css", "server/assets/*.js"]
"codealmanac.prompts" = ["base/*.md", "operations/*.md"]

[tool.uv]
package = true
