[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "codealmanac"
version = "0.3.4"
description = "A local codebase wiki maintained by AI coding agents."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE.md"]
authors = [{ name = "Almanac" }]
keywords = ["agents", "codebase", "documentation", "wiki"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "beautifulsoup4>=4.15.0",
  "charset-normalizer>=3.4.7",
  "claude-agent-sdk>=0.2.110",
  "fastapi>=0.138.1",
  "httpx>=0.28.1",
  "humanfriendly>=10.0",
  "jsonlines>=4.0",
  "markdown-it-py>=4.2.0",
  "pathspec>=1.1.1",
  "pydantic>=2.8",
  "pydantic-settings>=2.12.0",
  "python-frontmatter>=1.3.0",
  "pyyaml>=6.0",
  "ruamel-yaml>=0.19.1",
  "uvicorn>=0.49.0",
]

[project.scripts]
codealmanac = "codealmanac.cli.main:main"

[project.urls]
Repository = "https://github.com/AlmanacCode/codealmanac"
Issues = "https://github.com/AlmanacCode/codealmanac/issues"

[dependency-groups]
dev = [
  "httpx2>=2.5.0",
  "pytest>=8.2",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codealmanac = [
  "server/assets/*.html",
  "server/assets/*.css",
  "server/assets/*.js",
  "server/assets/viewer/*.js",
]
"codealmanac.manual" = ["*.md"]
"codealmanac.prompts" = ["base/*.md", "operations/*.md"]
"codealmanac.services.setup" = ["*.md"]

[tool.uv]
package = true
